# Arduino_RPI

Project/CAMERA/DisplayImage/: .main.cpp.swp  CMakeCache.txt  Makefile  cmake_install.cmake  display_image.py  main.cpp
Project/CAMERA/DisplayImage2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Project/CAMERA/DisplayImage3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
Project/CAMERA/StreamVideo/: start_stream.sh
Project/CAMERA/camvc/: CMakeCache.txt  CMakeLists.txt  Makefile  camcv.c.backup2  camcv.c.backup3  camcv.c.backup5  camcv2.c  camcv_vid0.c  camcv_vid1.cpp  cmake_install.cmake  csv-test
Project/CAMERA/camvc/orl_faces/s41/: 1.pgm
Project/CAMERA/face-train/: CMakeCache.txt  Makefile  cmake_install.cmake  preparePhoto.cpp
Project/CAMERA/face-train/face0/: prepare
Project/CAMERA/facerec/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  faceReco.cpp
Project/GPIO/adc/: adc_joystick_read.py
Project/GPIO/adc_servo/: Servo_Example.py  adc_joystick_read.py  servopwm.py
Project/GPIO/servo/: README  servo0d.py  servo_all_angles.py  servo_all_angles2.py  servon90d.py  servon90d2.py  servopwm.py
arduino_mini/snes_controller/: snes_controller.ino
robot_control/: README.txt
robot_control/github_robot_master/app/src/main/java/csusb/cse541/william/cse541robotics/: MainActivity.java
robot_control/github_robot_master/app/src/main/res/layout/: activity_main.xml
robot_control/wifi_control/: wifi_control.ino
